# ai

./: .dockerignore  .env  .env.toml.template  .gitignore  Dockerfile  LOGGING_GUIDE.md  README.md  config.toml  desktop.ini  docker-compose.yml  docker-run.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
bookstar/: __init__.py  main.py
bookstar/config/: __init__.py  config.py  logging_config.py
bookstar/database/: __init__.py  connection.py
bookstar/models/: __init__.py  models.py
bookstar/schemas/: __init__.py  schemas.py
bookstar/services/: __init__.py  recommendation.py
bookstar/utils/: decorators.py
examples/: logging_example.py
recommend_algorithm/: db_connection.py  main.py  models.py  recommendation.py  schemas.py
src/: db_connection.py  main.py  models.py  recommendation.py  schemas.py  test_wordcloud.py  wordcloud_utils.py
tests/: conftest.py  test_config.py  test_decorators.py  test_logging.py  test_main.py  test_recommendation.py
